--- a/V1/assets/css/style.css
+++ b/V1/assets/css/style.css
@@ -1,14 +1,14 @@
-html{
-    margin: 0;
-    padding: 0;
+root {
+	margin: 0;
+	padding: 0;
 }
 
 /* =========== FOND GRADIENT ============== */
 
 body {
-	background: linear-gradient(-45deg, #D1CFBC, #C8DBFF, #D4FFD7, #FFC4A0);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	background: linear-gradient(-45deg, #ffffff, #ffffff, #ffffff, #ffffff);
+	background-size: 1000% 1000%;
+	animation: gradient 25s ease infinite;
 	height: 100vh;
 }
 
@@ -26,23 +26,24 @@ body {
 
 /* =============== NAV =============== */
 
-.navBar a{
-    padding: 3px 15px;
+.navBar a {
+	padding: 3px 15px;
 }
 
 a:hover {
-    background-color: rgba(250, 250, 230, .5);
-    color: gray;
-    border-radius: 30px; 
+	background-color: rgba(180, 180, 85, 0.5);
+	color: gray;
+	border-radius: 30px;
+	transition: 0.5s ease-in-out;
 }
 
-h1{
+h1 {
 	color: #2e5e43;
 }
 
-@media all and (max-width:576px){
-	h1{
-		text-align:center;
+@media all and (max-width: 576px) {
+	h1 {
+		text-align: center;
 		width: 100%;
 		font-size: 2em;
 		font-family: 'Noto Sans', sans-serif;
@@ -50,11 +51,11 @@ h1{
 	}
 }
 
-@media all and (min-width:576px){
-	h1{
+@media all and (min-width: 576px) {
+	h1 {
 		font-size: 5em;
 		text-align: center;
-		font-family: 'Noto Sans', sans-serif;	
+		font-family: 'Noto Sans', sans-serif;
 	}
 }
 
@@ -65,78 +66,78 @@ h1{
 }
 .face:hover {
 	transform: rotate(-5deg);
-
 }
 
 /* ================= TECHNOS PRESENTES ET FUTURES ============= */
 
-#technos, #inProgress{
+#technos,
+#inProgress {
 	max-width: 80%;
 }
 .box {
-	background: rgba(255,255,255,0.24);
+	background: rgba(255, 255, 255, 0.24);
 	margin-top: 1%;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+	transition: all 0.8s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
-@media all and (min-width:900px){
-	.box{
+@media all and (min-width: 900px) {
+	.box {
 		padding: 20px 50px;
 	}
-} 
+}
 .box:hover {
-	animation-duration: 0.15s;
-	border-left: 5px solid rgba(255,255,255,0.010);
-	box-shadow: 0 14px 28px rgba(46, 94, 67,0.25), 0 10px 10px rgba(46, 94, 67,0.22);
+	transition: 0.7s;
+	border-left: 5px solid rgba(255, 255, 255, 0.01);
+	box-shadow: 0 14px 28px rgba(46, 94, 67, 0.25), 0 10px 10px rgba(46, 94, 67, 0.22);
 }
 
 /* =============== TRAVAUX PRECEDENTS ================  */
 
-#previousWorks img{
+#previousWorks img {
 	border-radius: 30px;
 	padding-top: 10px;
 }
-@media all and (max-width:600px){
-	#previousWorks img{
+@media all and (max-width: 600px) {
+	#previousWorks img {
 		padding-left: 10;
 		padding-right: 10;
 	}
 }
-@media all and (min-width:600px){
-	#previousWorks img{
+@media all and (min-width: 600px) {
+	#previousWorks img {
 		padding-left: 0;
 		padding-right: 0;
 		filter: opacity(90%);
 		-webkit-filter: opacity(90%);
 	}
 }
-#previousWorks img:hover{
-	box-shadow: 0 14px 28px rgba(46, 94, 67,0.25), 0 10px 10px rgba(46, 94, 67,0.22);
+#previousWorks img:hover {
+	box-shadow: 0 14px 28px rgba(46, 94, 67, 0.25), 0 10px 10px rgba(46, 94, 67, 0.22);
 	filter: opacity(100%);
 	-webkit-filter: opacity(100%);
 }
 /* ============= FOOTER ============== */
-footer li{
+footer li {
 	list-style: none;
 	color: black;
 }
-footer a{
+footer a {
 	text-decoration: none;
 	color: black;
 }
 
 /* ================ page ABOUT ============= */
-.namePart1{
+.namePart1 {
 	letter-spacing: 0.3em;
 }
-.namePart2{
+.namePart2 {
 	letter-spacing: 0.3em;
 }
-.namePart3{
+.namePart3 {
 	letter-spacing: 0.45em;
 }
 /* ======= FRISE ============== */
-.timelineElement{
+.timelineElement {
 	margin-top: 1%;
 	background-color: #2e5e43;
 	color: white;
@@ -145,23 +146,23 @@ footer a{
 	height: 4em;
 	align-items: center;
 }
-.timelineElement p{
+.timelineElement p {
 	margin: 0;
 	font-weight: bold;
 	text-transform: uppercase;
 }
 /* ========== Interets ===========  */
-#values{
-	background-color: rgba(255,255,255,0.24);
+#values {
+	background-color: rgba(255, 255, 255, 0.24);
 	border-radius: 30px;
-	box-shadow: 0 14px 28px rgba(46, 94, 67,0.20), 0 10px 10px rgba(46, 94, 67,0.18);
+	box-shadow: 0 14px 28px rgba(46, 94, 67, 0.2), 0 10px 10px rgba(46, 94, 67, 0.18);
 	padding: 20px;
 }
-#values h2{
+#values h2 {
 	color: #49966a;
 	font-weight: 700;
 }
-#values h3{
+#values h3 {
 	color: #377250;
 	font-weight: 700;
 }
